# 2023_Haghighi_IJCAI

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml
barcodefit/dataobjects/: spot.py  spot_utils.py
barcodefit/model/: barcode_calling_KD2.py  config.py  data_generators.py  model_utils.py  networks.py  visualize_utils.py
experiments/: benhcmarking_spot_to_cell_level_calls.ipynb
experiments/ablation/: ablation_table2.sh  burnin.py  run_exp.py
experiments/plepi-iss/: run_online_learning.py
neocode/: README.md  env.yml  env_cpu.yaml  pyproject.toml
neocode/lite/: README.md  pyproject.toml
neocode/lite/src/ncode/: __init__.py  cli.py
neocode/lite/tests/: __init__.py
neocode/notes/: explore_iss_images.py
neocode/src/neocode/: cli.py  utils.py
neocode/src/neocode/data/: iss.py
neocode/src/neocode/model/: __init__.py
neocode/tests/: __init__.py
resource/: CP228_Codebook.csv  CP228_Experimental_Codebook.csv  CP228_NGS_Reads_And_Library_Mapped.csv  Codebook.csv
results/benchmark_results/: bardensr_B_Well4_60.csv  istdeco_B_Well4_60.csv  postcode_B_Well4_60.csv
results/paper_results/: table2_results.txt  table3_plepi_results.txt
